# json-dict-transformer

./: LICENSE  README.md  pyproject.toml
examples/: example-1.py
json_dict_transformer/: __init__.py  main.py
