[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "json_dict_transformer"
version = "1.0.0"
authors = [
  { name="Krzysztof Åuczak" },
]
description = "Transform JSON into another JSON using schema"
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/thevops/json-dict-transformer"
